ISP20220041 - 新增Water Fastness Test模組

--- a/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
@@ -1153,7 +1153,7 @@
             url: "@Url.Action("Report", "WaterFastness", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ID: $('#Main_POID').val(), No: $('#Main_TestNo').val(), IsToPDF: IsToPDF }),
+            data: JSON.stringify({ ID: $('#Main_ID').val(), No: $('#Main_TestNo').val(), IsToPDF: IsToPDF }),
             async: false,
             success: function (data) {
                 if (data.Result) {
