--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -687,6 +687,8 @@
         $('#Picture').on('click', function () {
             var para = "?Title=" + $('.page-header span').html() + "&EditMode=" + EditMode;
             para += "&" + "Table=FIR_Laboratory";
+            para += "&" + "TargetBeforeColumn=CrockingMain_CrockingTestBeforePicture";
+            para += "&" + "TargetAfterColumn=CrockingMain_CrockingTestAfterPicture";
             para += "&" + "BeforeColumn=CrockingTestBeforePicture";
             para += "&" + "AfterColumn=CrockingTestAfterPicture";
             para += "&" + "PKey_1=ID";
